[package]
name = "nes_core"
version = "0.1.0"
authors = ["Eli Lipsitz <eli.lipsitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.3.1"
erased-serde = "0.3.13"
bincode = "1.3.1"
